update payment, feedback, statistics